[package]
name = "rust_elm_types"
version = "0.1.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["realm_mate"]

[dependencies]
realm_mate = {path = "./realm_mate/"}
serde = "~1.0.27"
serde_derive = "~1.0.27"
serde_json = "~1.0.9"
