[package]
name = "realm_mate"
version = "0.1.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"
darling = "0.9.0"
syn = "0.15.42"